# RosCMR

./: .gitignore  README.md
car_simulator/: CMakeLists.txt  package.xml
car_simulator/config/: car_params.yaml
car_simulator/include/: car_ode.h
car_simulator/include/car_simulator/: car_sim.h  simple_input.h
car_simulator/launch/: car_simulator.launch
car_simulator/script/: plot_result.py
car_simulator/src/: car_ode.cpp  car_sim.cpp  car_sim_node.cpp  simple_input.cpp  simple_input_node.cpp
car_traj_ctrl/: CMakeLists.txt  package.xml
car_traj_ctrl/config/: car_kin_PI.yaml  car_kin_linctrl.yaml  car_kin_sim.yaml  gainPI.cfg  xyposition.xml
car_traj_ctrl/include/: car_kin_ode.h
car_traj_ctrl/include/car_traj_ctrl/: car_kin_PI.h  car_kin_fblin.h  car_kin_linctrl.h  car_kin_sim.h
car_traj_ctrl/launch/: car_dyn_PI.launch  car_dyn_PI_Q4_feasible.launch  car_dyn_linctrl.launch  car_kin_PI.launch
car_traj_ctrl/script/: plot_result_PI.py  plot_result_linctrl.py  xyposition.xml
car_traj_ctrl/src/: car_kin_PI.cpp  car_kin_PI_node.cpp  car_kin_fblin.cpp  car_kin_linctrl.cpp  car_kin_linctrl_node.cpp  car_kin_ode.cpp  car_kin_sim.cpp  car_kin_sim_node.cpp
